--- a/hoppy fields/Packages/manifest.json
+++ b/hoppy fields/Packages/manifest.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.2d.tilemap": "1.0.0",
+    "com.unity.2d.tilemap.extras": "https://github.com/Unity-Technologies/2d-extras.git#master",
     "com.unity.ads": "3.7.5",
     "com.unity.analytics": "3.6.12",
     "com.unity.collab-proxy": "1.17.7",
